[gd_scene load_steps=2 format=2]

[ext_resource path="res://FightRoom.gd" type="Script" id=1]

[node name="FightRoom" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MC_Char_Name" type="Label" parent="."]
margin_left = 59.0
margin_top = 139.0
margin_right = 156.0
margin_bottom = 153.0
text = "Char Name"
align = 2

[node name="MC_Player_Name" type="Label" parent="."]
margin_left = 60.0
margin_top = 118.0
margin_right = 157.0
margin_bottom = 133.0
text = "Player Name"
align = 2

[node name="MC Label" type="Label" parent="."]
margin_left = 739.0
margin_top = 17.0
margin_right = 836.0
margin_bottom = 98.0
text = "Max Health:
Current Health:
Attack:"
align = 2

[node name="MC_Max_Health" type="Label" parent="."]
margin_left = 838.0
margin_top = 18.0
margin_right = 878.0
margin_bottom = 32.0
text = "10"

[node name="MC_Curr_Health" type="Label" parent="."]
margin_left = 840.0
margin_top = 35.0
margin_right = 880.0
margin_bottom = 49.0
text = "10"

[node name="MC_Attack" type="Label" parent="."]
margin_left = 839.0
margin_top = 51.0
margin_right = 879.0
margin_bottom = 65.0
text = "10"

[node name="E_Char_Name" type="Label" parent="."]
margin_left = 751.0
margin_top = 135.0
margin_right = 848.0
margin_bottom = 149.0
text = "Char Name"
align = 2

[node name="E_Player_Name" type="Label" parent="."]
margin_left = 750.0
margin_top = 116.0
margin_right = 847.0
margin_bottom = 130.0
text = "Player Name"
align = 2

[node name="E Label" type="Label" parent="."]
margin_left = 63.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 97.0
text = "Max Health:
Current Health:
Attack:"
align = 2

[node name="E_Max_Health" type="Label" parent="."]
margin_left = 162.0
margin_top = 17.0
margin_right = 202.0
margin_bottom = 31.0
text = "10"

[node name="E_Curr_Health" type="Label" parent="."]
margin_left = 164.0
margin_top = 34.0
margin_right = 204.0
margin_bottom = 48.0
text = "10"

[node name="E_Attack" type="Label" parent="."]
margin_left = 163.0
margin_top = 50.0
margin_right = 203.0
margin_bottom = 64.0
text = "10"

[node name="Fight" type="Button" parent="."]
margin_left = 430.0
margin_top = 212.0
margin_right = 638.0
margin_bottom = 312.0
text = "Fight!"

[connection signal="pressed" from="Fight" to="." method="_on_Fight_pressed"]
